# Spoofy

./: .gitignore  CMakeLists.txt  README.md
cmake/: SFMLConfig.cmake
include/Spoofy/: Spoofy.hpp
include/Spoofy/common/: GameDefs.hpp  IApp.hpp  IEntity.hpp  IGame.hpp  SpoofyDefs.hpp  SpoofyEntity.hpp
include/Spoofy/handlers/: InputHandler.hpp  LogicHandler.hpp  WindowHandler.hpp
include/Spoofy/utils/: MathUtils.hpp
src/Spoofy/: CMakeLists.txt  Spoofy.cpp
src/Spoofy/common/: AbstractGame.cpp
src/Spoofy/handlers/: InputHandler.cpp  LogicHandler.cpp  WindowHandler.cpp
src/Spoofy/utils/: MathUtils.cpp
tests/Spoofy/: CMakeLists.txt  main.cpp
